--- a/css/base.css
+++ b/css/base.css
@@ -80,3 +80,10 @@ button {
   padding-top: 1.25rem;
   padding-bottom: 1.875rem;
 }
+
+.horizontal-divider {
+  width: 80%;
+  margin: 0.75rem auto;
+  height: 1px;
+  background-color: #444444;
+}
