--- a/css/styles.css
+++ b/css/styles.css
@@ -178,3 +178,92 @@
   background: var(--bg);
   flex-grow: 1;
 }
+
+.spell-list .spells {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+}
+
+.spell-block {
+  display: flex;
+  width: 100%;
+  border: 1px solid var(--color);
+  border-radius: 12px;
+  align-items: center;
+  padding: 0.5rem;
+  box-shadow: 0 4px 8px rgba(68, 68, 68, 0.2);
+  transition: all 0.5s ease-in-out;
+  cursor: pointer;
+}
+
+.spell-block:hover {
+  box-shadow: 0 4px 16px rgba(68, 68, 68, 0.4);
+}
+
+.spell-block .fav {
+  width: 2rem;
+  height: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.spell-block h3 {
+  flex-grow: 1;
+  height: 2rem;
+  line-height: 2;
+}
+
+.spell-level {
+  padding: 0 1rem;
+  font-size: 0.825rem;
+}
+
+.spell-school {
+  background: var(--color);
+  color: var(--bg);
+  padding: 0.5rem 1rem;
+}
+
+.spell-list-controls {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem 32px;
+}
+
+.spell-list-controls li {
+  font-weight: 500;
+  cursor: pointer;
+  padding: 0.5rem;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s ease-in-out;
+}
+
+.spell-list-controls li:hover {
+  box-shadow: 0 4px 8px rgba(68, 68, 68, 0.2);
+}
+
+.spell-list-controls:first-child {
+  font-weight: 800;
+  font-size: 20px;
+}
+
+.spell-list-controls:last-child {
+  font-weight: 800;
+  font-size: 20px;
+}
+
+.spell-list-controls .current-page {
+  font-weight: 800;
+  font-size: 20px;
+  transform: translateY(-4px);
+}
