--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,7 @@
   text-align: center;
 }
 
-.sidebar .class-filters {
+.sidebar .school-filters {
   list-style: none;
   display: flex;
   flex-direction: column;
@@ -91,7 +91,7 @@
   overflow-y: scroll;
 }
 
-.sidebar .class-filters li {
+.sidebar .school-filters li {
   line-height: 2;
   letter-spacing: 1px;
   border-bottom: 1px solid var(--color);
@@ -103,17 +103,17 @@
   cursor: pointer;
 }
 
-.sidebar .class-filters li:hover {
+.sidebar .school-filters li:hover {
   transform: scale(1.2);
   font-weight: 800;
 }
 
-.sidebar .class-filters li.active {
+.sidebar .school-filters li.active {
   transform: scale(1.2);
   font-weight: 800;
 }
 
-.sidebar .class-filters li p {
+.sidebar .school-filters li p {
   margin-top: 0.5rem;
   margin-bottom: 0;
 }
